syntax = "proto3";

package types;

option go_package = "sundae-party/api-server/pkg/apis/core/types";

service IntegrationHandler {
    rpc Create (Integration) returns (Integration);
    rpc Get (IntegrationServerRequest) returns (Integration);
    rpc Delete (Integration) returns (Integration);
    rpc SetState (SetStateRequest) returns (IntegrationState);
    rpc CallService (CallServiceRequest) returns (CallServiceResponse);
    rpc Connect (Integration) returns (stream CallServiceRequest);
    rpc StorePut (StoreRequest) returns (StoreRequest);
    rpc StoreGet (StoreRequest) returns (StoreRequest);
}

message StoreRequest {
    string integration_name = 1;
    string key = 2;
    string value = 3;
}

message IntegrationServerRequest {
    string integration_name = 1;
}

message CallServiceRequest {
    string integration_name = 1;
    Service service = 5;
}

message CallServiceResponse {
    bool success = 1;
    string error = 2;
}

message SetStateRequest {
    string integration_name = 1;
    IntegrationState state = 5;
}

message Integration {
    string name = 1;
    string documentation = 2;
    string version = 3;
    string url = 4;
    IntegrationState state = 5;
    string store_path = 6;
    repeated Service services = 7;
}

message IntegrationState {
	bool connected = 1;
}

message Service {
    string name = 1;
    string data = 2;
}