syntax = "proto3";

package types;

import "integration.proto";

option go_package = "github.com/sundae-party/api-server/pkg/apis/core/types";

service SensorHandler {
    rpc Get (Sensor) returns (Sensor);
    rpc Create (Sensor) returns (Sensor);
    rpc Update (Sensor) returns (Sensor);
    rpc Delete (Sensor) returns (Sensor);

    rpc GetAll (types.GetAllRequest) returns (stream Sensor);
    rpc WatchAll (types.GetAllRequest) returns (stream Sensor);
    rpc setValue (SetSensorValueRequest) returns (Sensor);
}

message SetSensorValueRequest {
    string SensorName = 1;
    string integrationName = 2;
    float value = 3;
    string unit = 4;
}

message Sensor {
    string name = 1;
    types.Integration integration = 2;
    string Device = 3;
    string displayed_name = 4;
    string room = 5;
    float value = 6;
    enum Class {
        none = 0;
        battery = 1;            //% of battery that is left
        humidity = 2;           //% of humidity in the air
        illuminance = 3;        //light level in lx or lm
        signal_strength = 4;    //Signal strength in dB or dBm
        temperature = 5;        //Temperature in °C, °F or K
        power = 6;              //Power in W or kW
        pressure = 7;           //Pressure in hPa or mbar
        current = 8;            //Current in A
        energy = 9;             //Energy in Wh or kWh
        power_factor = 10;      //Power Factor in %
        voltage = 11;           //Voltage in V
    }
    Class class = 7;
    string mutation = 8;
}